# TechnoParkHW

./: .travis.yml  CMakeLists.txt  README.md  input.h  main.c  sum.h  sum_parallel.c
files/: time_result.txt
lib/input_lib/: CMakeLists.txt
lib/input_lib/include/: input.h
lib/input_lib/src/: input.c
lib/input_lib/tests/: CMakeLists.txt
lib/input_lib/tests/src/: test.txt  unit_input.cpp
lib/sum_lib/: CMakeLists.txt
lib/sum_lib/include/: sum.h
lib/sum_lib/src/: sum_parallel.c  sum_static.c
lib/sum_lib/test/: CMakeLists.txt
lib/sum_lib/test/src/: stress.c  unit.cpp
src/: main.c  quadrafunc.c  quadrafunc.h
test/: test_quadra.cpp
